# PrefixPGM

./: CMakeLists.txt  README.md  generator.tsk  main.cpp
scripts/: mkdata
